objects/ProductCategory.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <inlineHelpText>This is the standard field provided by Salesforce.</inlineHelpText>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent category, if this is the child category</inlineHelpText>
        <label>Parent Category</label>
        <referenceTo>ProductCategory</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <inlineHelpText>The sequence for the category to be displayed.</inlineHelpText>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>